--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pyhabit"]
 	path = pyhabit
 	url = https://github.com/Daedalus12/pyhabit.git
+[submodule "pytodoist"]
+	path = pytodoist
+	url = https://github.com/Daedalus12/pytodoist.git
